--- a/index.html
+++ b/index.html
@@ -5,36 +5,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+  <main>
+    <section class="container">
+      <div class="container__pic">
+        <picture>
+          <source media="(max-width: 945px)" srcset="./images/illustration-woman-online-mobile.svg">
+          <source media="(min-width: 945px)" srcset="./images/illustration-woman-online-desktop.svg">
+          <img src="./images/illustration-woman-online-mobile.svg" alt="">
+        </picture>
+      </div>
+      <div class="container__texts">
+        <div class="container__texts--titel"><h1>FAQ</h1></div>
+        <div class="container__texts--boxs">
+          <div class="box">
+            <div class="question">
+              <p>How many team members can I invite?</p>
+              <img src="./images/icon-arrow-down.svg" alt="">
+            </div>
+            <div class="answer">
+              <p>  You can invite up to 2 additional users on the Free plan. There is no limit on 
+                team members for the Premium plan.</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="question">
+              <p>What is the maximum file upload size?</p>
+              <img src="./images/icon-arrow-down.svg" alt="">
+            </div>
+            <div class="answer">
+              <p>  No more than 2GB. All files in your account must fit your allotted storage space.
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="question">
+              <p>  How do I reset my password?</p>
+              <img src="./images/icon-arrow-down.svg" alt="">
+            </div>
+            <div class="answer">
+              <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+                A reset link will be emailed to you.</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="question">
+              <p>  Can I cancel my subscription?</p>
+              <img src="./images/icon-arrow-down.svg" alt="">
+            </div>
+            <div class="answer">  Yes! Send us a message and we’ll process your request no questions asked.</div>
+          </div>
+          <div class="box">
+            <div class="question">
+              <p>  Do you provide additional support?</p>
+              <img src="./images/icon-arrow-down.svg" alt="">
+            </div>
+            <div class="answer">
+              <p>  Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+   </main>
+ 
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+  
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+
 </body>
 </html>
