--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
    </main>
  
 
-
+  
+   <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/i-am-vahid">Vahid</a>.
+  </div>
 
   
 
