--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 team members for the Premium plan.</p>
             </div>
           </div>
-          <div class="box">
+          <div class="box" style="grid-template-rows: 1fr 1fr;">
             <div class="question">
-              <p>What is the maximum file upload size?</p>
-              <img src="./images/icon-arrow-down.svg" alt="">
+              <p class="bold">What is the maximum file upload size?</p>
+              <img class="rotate" src="./images/icon-arrow-down.svg" alt="">
             </div>
             <div class="answer">
               <p>  No more than 2GB. All files in your account must fit your allotted storage space.
