--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <section class="container">
       <div class="container__pic">
         <picture>
-          <source media="(max-width: 945px)" srcset="./images/illustration-woman-online-mobile.svg">
-          <source media="(min-width: 945px)" srcset="./images/illustration-woman-online-desktop.svg">
-          <img src="./images/illustration-woman-online-mobile.svg" alt="">
+          <source media="(max-width: 953.9999px)" srcset="./images/illustration-woman-online-mobile.svg">
+          <source media="(min-width: 954px)" srcset="./images/illustration-woman-online-desktop.svg">
+          <img id="pic-box" src="./images/illustration-woman-online-mobile.svg" alt="">
         </picture>
       </div>
       <div class="container__texts">
